--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - POSTGRES_PASSWORD=password
     ports:
       - '5432:5432'
+    networks:
+      python-networks:
+
   web:
     build: .
     command: 'python manage.py runserver 0.0.0.0:8000'
@@ -21,6 +24,10 @@ services:
       - '8000:8000'
     depends_on:
       - db
+    networks:
+      python-networks:
 
 volumes:
   django-data: {}
+networks:
+  python-networks:
